--- a/VULKAN/VULKAN.vcxproj
+++ b/VULKAN/VULKAN.vcxproj
@@ -164,6 +164,10 @@
   <ItemGroup>
     <Text Include="helper.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders\frag.spv" />
+    <None Include="shaders\vert.spv" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
